# Godoty

./: .gitignore  .godoty_metrics.db  AGENTS.md  CLAUDE.md  DEBUGGING.md  DEVELOPMENT.md  Direct OpenRouter Integration Without Wrapper.md  ENHANCE_STRANDS_AGENTS.md  FRONTEND_FIXES_SUMMARY.md  GEMINI.md  INTEGRATION_SUMMARY.md  Integrating Strands Agents with OpenRouter.md  Monetizing AI Assistant with OpenRouter.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  fix_frontend_sse.py  index.html  package-lock.json  package.json  playwright.config.ts  prompts.json  requirements.txt  test_output.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.sisyphus/: boulder.json  ralph-loop.local.md
backend/: .env.example  .godoty_metrics.db  PLANNING_AGENT_README.md  README.md  README_EXECUTOR.md  SETUP_GUIDE.md  agent_config.json  config_manager.py  main.py  pytest.ini  rate_limiter.py  reproduce_agent_loop.py  requirements.txt  run_server.py  start_server.py  test_agent.py  test_debug_loop.py  test_executor.py  test_executor_output.txt  test_godot_connection.py  test_openrouter_debug.py  test_output.txt  test_streaming_debug.py  test_tool_execution.py  user_data.py
brain/: debug_metrics.py  pyproject.toml  requirements.txt  run_brain.py
brain/app/: agno_patches.py  cache.py  config.py  db_pool.py  main.py  sessions.py
brain/app/agents/: __init__.py  agent.py  basic_agent.py  context.py  schemas.py  team.py  tools.py
brain/app/knowledge/: __init__.py  enhanced_knowledge.py  godot_docs_loader.py  godot_knowledge.py  knowledge_tools.py  lsp_client.py  project_knowledge.py
brain/app/protocol/: jsonrpc.py
brain/app/tools/: __init__.py
brain/tests/: test_agent_security.py  test_context.py  test_file_tools.py  test_handshake.py  test_knowledge.py  test_websocket_security.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
distribution/: version.txt
docs/: protocol.md
e2e/: example.spec.ts  full-flow.spec.ts
frontend/: .gitignore  angular.json  package-lock.json  package.json  tailwind.config.js
godot-plugin/: project.godot  test_scene.tscn
godoty/: angular.json  package.json
playwright-report/: index.html
prompts/: architect.yaml  coder.yaml  godoty.yaml  (+2 more)
(+519 files in other folders)
