[project]
name = "godoty-brain"
version = "0.0.1"
description = "Local-first sidecar server for Godoty"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "agno>=2.3.0,<3.0.0",  # Pin to 2.x - Team API changed significantly from 1.x
  "litellm>=1.50.0,<2.0.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",  # Required by Agno's SqliteDb
  "lancedb>=0.10.0",  # Vector database for knowledge base
  "httpx>=0.27",      # Async HTTP client for doc fetching
  "sentence-transformers>=3.0.0",  # Local HuggingFace embeddings
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
