[package]
name = "godoty-desktop"
version = "0.1.0"
description = "Godoty - AI Assistant for Godot Game Development"
authors = ["Godoty Team"]
edition = "2021"

[lib]
name = "godoty_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-single-instance = "2.3.6"
